--- a/scss/layout-vars/_fonts.scss
+++ b/scss/layout-vars/_fonts.scss
@@ -10,58 +10,68 @@
   font-family: "Mulish";
   font-weight: 900;
   font-size: 100px;
+  color: $primary-dark2;
 }
 
 @mixin HB {
   font-family: "Mulish";
   font-weight: 900;
   font-size: 72px;
+  color: $primary-dark2;
 }
 
 @mixin HC {
   font-family: "Mulish";
   font-weight: 900;
   font-size: 60px;
+  color: $primary-dark2;
 }
 
 @mixin H1 {
   font-family: "Mulish";
   font-weight: 800;
   font-size: 52px;
+  color: $primary-dark2;
 }
 
 @mixin H2 {
   font-family: "Mulish";
   font-weight: 800;
   font-size: 40px;
+  color: $primary-dark2;
 }
 
 @mixin H3 {
   font-family: "Mulish";
   font-weight: 700;
   font-size: 28px;
+  color: $primary-dark2;
 }
 
 @mixin H4 {
   font-family: "Mulish";
   font-weight: 700;
   font-size: 24px;
+  color: $primary-dark2;
 }
 
 @mixin H5 {
   font-family: "Mulish";
   font-weight: 700;
   font-size: 18px;
+  color: $primary-dark2;
 }
 
 @mixin P15 {
   font-family: "Mulish";
   font-weight: 400;
   font-size: 15px;
+  color: $primary-dark2;
 }
 
 @mixin P13 {
   font-family: "Mulish";
   font-weight: 400;
   font-size: 13px;
+  color: $primary-dark2;
 }
