--- a/scss/index.scss
+++ b/scss/index.scss
@@ -6,6 +6,7 @@
 @import "./layout-vars/fonts";
 // blocks
 @import "./blocks/header";
+@import "./blocks/burger-menu";
 
 .wrapper {
   position: relative;
@@ -14,6 +15,7 @@
 }
 
 .container {
-  max-width: 1050px;
+  max-width: 1060px;
   margin: 0px auto;
+  padding: 0px 10px;
 }
