--- a/scss/elements/_button.scss
+++ b/scss/elements/_button.scss
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transition: background 0.2s, transform 0.2s;
+  transition: background 0.2s;
   span {
     color: $bright;
     font-weight: bold;
@@ -22,6 +22,5 @@
   &:hover,
   &:focus {
     background: $primary;
-    transform: scale(1.02);
   }
 }
