--- a/scss/index.scss
+++ b/scss/index.scss
@@ -8,6 +8,7 @@
 @import "./blocks/header";
 @import "./blocks/burger-menu";
 @import "./blocks/hero";
+@import "./blocks/feature";
 //elements
 @import "./elements/button";
 
