--- a/scss/index.scss
+++ b/scss/index.scss
@@ -9,8 +9,10 @@
 @import "./blocks/burger-menu";
 @import "./blocks/hero";
 @import "./blocks/feature";
+@import "./blocks/services";
 //elements
 @import "./elements/button";
+@import "./elements/titleH2";
 
 .wrapper {
   position: relative;
