--- a/scss/layout-vars/_fonts.scss
+++ b/scss/layout-vars/_fonts.scss
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "Mulish";
-  src: url("../../fonts/Mulish-VariableFont_wght.eot");
-  src: local("☺"), url("../../fonts/Mulish-VariableFont_wght.woff") format("woff"),
-    url("../../fonts/Mulish-VariableFont_wght.ttf") format("truetype"),
-    url("../../fonts/Mulish-VariableFont_wght.svg") format("svg");
+  src: url("./../../fonts/Mulish-VariableFont_wght.eot");
+  src: local("☺"), url("./../../fonts/Mulish-VariableFont_wght.woff") format("woff"),
+    url("./../../fonts/Mulish-VariableFont_wght.ttf") format("truetype"),
+    url("./../../fonts/Mulish-VariableFont_wght.svg") format("svg");
 }
 
 @mixin HA {
