--- a/scss/index.scss
+++ b/scss/index.scss
@@ -10,6 +10,7 @@
 @import "./blocks/hero";
 @import "./blocks/feature";
 @import "./blocks/services";
+@import "./blocks/projects";
 //elements
 @import "./elements/button";
 @import "./elements/titleH2";
