--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -9,6 +9,14 @@
     @include HC;
     max-width: 510px;
     margin: 270px 0px 50px 0px;
+
+    transform: translate(0, 100%);
+    opacity: 0;
+    transition: all 0.6s ease 0.4s;
+  }
+  &__title._active {
+    transform: translate(0, 0);
+    opacity: 1;
   }
 
   &_subtitle {
