--- a/scss/index.scss
+++ b/scss/index.scss
@@ -13,6 +13,7 @@
 @import "./blocks/projects";
 @import "./blocks/feature2";
 @import "./blocks/testimonial";
+@import "./blocks/faq";
 //elements
 @import "./elements/button";
 @import "./elements/titleH2";
